--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "passport-oauth2",
-  "version": "1.3.0",
+  "name": "passport-custom-oauth2",
+  "version": "1.3.1",
   "description": "OAuth 2.0 authentication strategy for Passport.",
   "keywords": [
     "passport",
